added a sign off

--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
 </div>
 <div class="media-wrapper">
   <img src="2.png" alt="Image 1">
-  <p>Thank you for looking through my book! You can download the digital version of the syllabus <a href="https://desireinabowlofrice.s3.us-east-2.amazonaws.com/Perpetually%2C+In+Fermentation+-+Digital+Syllabus.pdf.zip"download>here.</a></p>
+  <p>Thank you for looking through my book! You can download the digital version of the syllabus <a href="https://desireinabowlofrice.s3.us-east-2.amazonaws.com/Perpetually%2C+In+Fermentation+-+Digital+Syllabus.pdf.zip"download>here.</a>
+  <br>
+  Happy learning,
+  <br>Kiara</p>
 </div>
 
 </div>  
