--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <video src="https://desireinabowlofrice.s3.us-east-2.amazonaws.com/closing.mov" autoplay muted loop></video>
 </div>
 <div class="media-wrapper">
-  <img src="2.png" alt="Image 1">
+  <img src="2.PNG" alt="Image 2">
   <p>Thank you for looking through my book! You can download the digital version of the syllabus <a href="https://desireinabowlofrice.s3.us-east-2.amazonaws.com/Perpetually%2C+In+Fermentation+-+Digital+Syllabus.pdf.zip"download>here.</a>
   <br>
   Happy learning,
