--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
       <p>This syllabus explores the purpose of notation, the format of knowledge, feedback loops, and a tool to un/re/learn historical narratives.
       <br>
       Access the syllabus by clicking!</p>
-
-    </div>
-    <div class="media-wrapper">
+  </div>
+    <!-- <div class="media-wrapper">
       <img src="4.jpg" alt="Image 1">
-    </div>
+    </div> -->
       <div class="media-wrapper">
       <img src="3.png" alt="Image 1">
     </div>
@@ -57,8 +56,7 @@
 <div class="media-wrapper">
   <img src="2.PNG" alt="Image 2">
   <p>Thank you for looking through my book! You can download the digital version of the syllabus <a href="https://desireinabowlofrice.s3.us-east-2.amazonaws.com/Perpetually%2C+In+Fermentation+-+Digital+Syllabus.pdf.zip"download>here.</a>
-  <br>
-  Happy learning,
+  <br>Happy learning,
   <br>Kiara</p>
 </div>
 
