--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </div>
 <div class="media-wrapper">
   <img src="2.PNG" alt="Image 2">
-  <p>Thank you for looking through my book! You can download the digital version of the syllabus <a href="https://desireinabowlofrice.s3.us-east-2.amazonaws.com/Perpetually%2C+In+Fermentation+-+Digital+Syllabus.pdf.zip"download>here.</a>
+  <p>Thank you for looking through my book! You can download the digital version of the syllabus <a href="https://desireinabowlofrice.s3.us-east-2.amazonaws.com/Perpetually%2C+In+Fermentation+-+Digital+Syllabus.pdf.zip"download>here. You can also check out a <a href="https://docs.google.com/spreadsheets/d/12XFJ3Fg60iL7nRZxfZo3s03qE3i5mw4KJ5q2dCp5Q1Q/edit?usp=sharing">spreadsheet</a> I made that hosts all of my research!</a>
   <br>Happy learning,
   <br>Kiara</p>
 </div>
