--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <img src="1.png" alt="Image 1">
       <p>This syllabus explores the purpose of notation, the format of knowledge, feedback loops, and a tool to un/re/learn historical narratives.
       <br>
-      Access the syllabus by clicking!</p>
+      Click, click, click anywhere to go next, next, next.</p>
   </div>
     <!-- <div class="media-wrapper">
       <img src="4.jpg" alt="Image 1">
@@ -55,7 +55,7 @@
 </div>
 <div class="media-wrapper">
   <img src="2.PNG" alt="Image 2">
-  <p>Thank you for looking through my book! You can download the digital version of the syllabus <a href="https://desireinabowlofrice.s3.us-east-2.amazonaws.com/Perpetually%2C+In+Fermentation+-+Digital+Syllabus.pdf.zip"download>here. You can also check out a <a href="https://docs.google.com/spreadsheets/d/12XFJ3Fg60iL7nRZxfZo3s03qE3i5mw4KJ5q2dCp5Q1Q/edit?usp=sharing">spreadsheet</a> I made that hosts all of my research!</a>
+  <p>Thank you for looking through my book! You can download the digital version of the syllabus <a href="https://desireinabowlofrice.s3.us-east-2.amazonaws.com/Perpetually%2C+In+Fermentation+-+Digital+Syllabus.pdf.zip"download>here.</a> If this interests you, I also made a <a href="https://docs.google.com/spreadsheets/d/12XFJ3Fg60iL7nRZxfZo3s03qE3i5mw4KJ5q2dCp5Q1Q/edit?usp=sharing">spreadsheet</a> that hosts all of my research. Feel free to contribute!</a>
   <br>Happy learning,
   <br>Kiara</p>
 </div>
