--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <div id="gallery">
     <div class="media-wrapper">
       <img src="1.png" alt="Image 1">
-      <p>This syllabus explores the purpose of notation, the format of knowledge, feedback loops, and a tool to un/re/learn historical narratives.
+      <p>This 18 × 29” syllabus explores the purpose of notation, <br>the format of knowledge, feedback loops, and a tool to <br>un/re/learn historical narratives. By actively integrating<br> the perspectives of diverse academics and artists, <br>and interrogating the parameters of “otherness” in a <br>Western-centric world, the syllabus fosters a nuanced <br>amalgamation of viewpoints. 
+<br>
       <br>
       Click, click, click anywhere to go next, next, next.</p>
   </div>
